artifacts/perf/frankentorch-kgs4.cod-b-logical-f64-20260626T061300Z/baseline_compare_h2h_local_cargo_failed.log
   Compiling num-traits v0.2.19
   Compiling matrixmultiply v0.3.10
error[E0514]: found crate `autocfg` compiled by an incompatible version of rustc
 --> /home/ubuntu/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/matrixmultiply-0.3.10/build.rs:4:15
  |
4 |         match autocfg::AutoCfg::new() {
  |               ^^^^^^^
  |
  = note: the following crate versions were found:
          crate `autocfg` compiled by rustc 1.98.0-nightly (beae78130 2026-06-09): /data/tmp/rch-targets-pool/frankentorch-cod-b/release/deps/libautocfg-ca6717da2c4ccec4.rlib
  = help: please recompile that crate using this compiler (rustc 1.98.0-nightly (f20a92ec0 2026-06-07)) (consider running `cargo clean` first)

error[E0514]: found crate `autocfg` compiled by an incompatible version of rustc
 --> /home/ubuntu/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/num-traits-0.2.19/build.rs:2:14
  |
2 |     let ac = autocfg::new();
  |              ^^^^^^^
  |
  = note: the following crate versions were found:
          crate `autocfg` compiled by rustc 1.98.0-nightly (beae78130 2026-06-09): /data/tmp/rch-targets-pool/frankentorch-cod-b/release/deps/libautocfg-ca6717da2c4ccec4.rlib
  = help: please recompile that crate using this compiler (rustc 1.98.0-nightly (f20a92ec0 2026-06-07)) (consider running `cargo clean` first)

For more information about this error, try `rustc --explain E0514`.
error: could not compile `matrixmultiply` (build script) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `num-traits` (build script) due to 1 previous error
